{
    "name": "InputControl",
    "maps": [
        {
            "name": "Player",
            "id": "85851f6e-d0f5-47d3-90e5-e29076f43a63",
            "actions": [
                {
                    "name": "InputHorizontal",
                    "type": "Value",
                    "id": "bc74ffe7-2d02-4d41-a8d4-0e78bee04176",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DoubleTapLeftDash",
                    "type": "Button",
                    "id": "19495e69-3161-4508-a3ad-e8a3b25b07d5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DoubleTapRightDash",
                    "type": "Button",
                    "id": "e8d2c910-b3f0-43cb-a3a6-eea6cb254808",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "capsLock",
                    "type": "Button",
                    "id": "3870e159-4462-48a6-97ca-f175dc0dce76",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "OverJumpButton",
                    "type": "Button",
                    "id": "397f2f17-6df9-4a62-961f-92a8ff677d9e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "ObstecleInteractionKey",
                    "type": "Button",
                    "id": "8be51d10-a4aa-44b2-ab2c-6b9c72523f0a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "SitButton",
                    "type": "Button",
                    "id": "934e6d77-2ff9-49d7-9cc9-1aef0b02fdfc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LieButton",
                    "type": "Button",
                    "id": "60d0b2ba-a624-4aab-bc7d-0c730b605598",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RunButton",
                    "type": "Button",
                    "id": "b91f38d6-a8be-4142-8134-b68bc7335208",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "AorD",
                    "id": "38071300-74db-4a19-82a2-0d9b1afb6030",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InputHorizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "2a612000-51d2-417a-9ea3-09f4b66e95af",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InputHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "9f940e61-48b2-4958-a69a-7771f78e5d86",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InputHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "4ea0544d-f2bb-4483-8883-e4462831c84a",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DoubleTapLeftDash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b5e2353d-c617-44c7-8489-b9cfa5f14236",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DoubleTapRightDash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c14b7162-d2ab-4b8b-82b0-4f4cfd85f357",
                    "path": "<Keyboard>/capsLock",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "capsLock",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d08bc9a4-e2b6-4746-a642-6acb1f8f6cfa",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OverJumpButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5d8b6167-ecff-466a-9c6e-5fcc6643f0fa",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ObstecleInteractionKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1a55797f-35ca-4069-b41d-499a0694d41b",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SitButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "46fa3437-da27-49e2-b533-4f576f35872e",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LieButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4a22c8f7-4876-4c50-868d-3407ea90e9ee",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RunButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}